--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,25 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <!--  -->
+    <build>
+<plugins>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <configuration>
+    <source>1.8</source>
+    <target>1.8</target>
+    <encoding>ISO-8859-1</encoding>
+  </configuration>
+</plugin>
+</plugins>
+</build>
+    <!-- 
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+	-->
 	<!--  引入依赖的Jar包-->
 	<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 	<dependencies>
